--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+.resultcards {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
 .logo.vite:hover {
   filter: drop-shadow(0 0 2em #747bff);
 }
