--- a/src/App.css
+++ b/src/App.css
@@ -18,8 +18,8 @@
   line-height: 24px;
   font-weight: 400;
 
-  color: #0f0f0f;
-  background-color: #f6f6f6;
+  color: white;
+  background-color: #1A1A1A;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -29,8 +29,6 @@
 }
 
 .container {
-  margin: 0;
-  padding-top: 10vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -40,10 +38,6 @@
 .row {
   display: flex;
   justify-content: center;
-}
-
-h1 {
-  text-align: center;
 }
 
 input,
