--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -11,7 +11,16 @@
     background-color: #202020;
 }
 
-.navbar > h1 {
+.left {
+    display: inline-flex;
+    justify-content: space-between;
+}
+
+.tab:hover {
+    cursor: pointer; 
+}
+
+.left > h1 {
     font-size: 1.25rem;
     margin: .5rem 1rem .25rem 1rem;
 }
