--- a/src/components/LiveUpdates.css
+++ b/src/components/LiveUpdates.css
@@ -2,6 +2,10 @@
     color: white;
 }
 
+.add-button {
+    margin: 0 0 0 .25em;
+}
+
 .cols {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
