--- a/src/components/LiveUpdates.css
+++ b/src/components/LiveUpdates.css
@@ -2,6 +2,11 @@
     color: white;
 }
 
+.keyword-form {
+    display: flex;
+    justify-content: center;
+}
+
 .add-button {
     margin: 0 0 0 .25em;
 }
@@ -13,5 +18,31 @@
 }
 
 .col {
+    display: flex;
+    flex-direction: column;
+}
 
+.keywords {
+    max-width: 90%;
+
+    margin: 1em 0 1em 0;
+
+    display: flex;
+    flex-wrap: wrap;
+
+    justify-content: center;
+}
+
+.keyword {
+    color: white;
+    font-size: 1.25rem;
+
+    width: fit-content;
+    max-height: 24rem;
+
+    padding: .5rem .5rem .25rem .5rem; 
+    margin: 1rem;
+
+    border-radius: .25em;
+    box-shadow: 0px 0px .25em 2px rgba(255, 255, 255, 0.1);
 }
