--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,21 @@
     width: auto;
 }
 
+.login {
+    width: fit-content;
+    height: fit-content;
+
+    position: absolute;
+    top: 0; bottom: 0;
+    left: 0; right: 0;
+
+    margin: auto;
+    padding: 1em;
+
+    border-radius: .25em;
+    box-shadow: 0px 0px .25em 2px rgba(255, 255, 255, 0.1);
+}
+
 .login-button {
     margin: 0 0 0 .25em;
 }
