--- a/src/components/LiveUpdates.css
+++ b/src/components/LiveUpdates.css
@@ -20,6 +20,8 @@
 .col {
     display: flex;
     flex-direction: column;
+
+    align-items: center;
 }
 
 .right {
@@ -27,7 +29,7 @@
 }
 
 .keywords {
-    max-width: 90%;
+    max-width: 80%;
 
     margin: 1em 0 1em 0;
 
